# genesis

./: .gitignore  BACKEND_AI_CORE_ALIGNMENT.md  CURSOR_TROUBLESHOOTING_PROMPTS.md  GENESIS_DEBUGGING_GUIDE.md  GENESIS_FOLDER_SYSTEM.md  GENESIS_SETUP_GUIDE.txt  OPTIMIZATION_REPORT.md  PROJECT_STRUCTURE.md  QUICK_FIXES.md  QUICK_REFERENCE.md  README.md  SIMPLIFIED_WORKFLOW.md  TECHNICAL_ARCHITECTURE.md  TROUBLESHOOTING.md  TROUBLESHOOTING_GUIDE.md  env.example  env.optimized  ollama_setup.md  pyproject.toml  setup_mongodb.py  start_ai_core.bat  start_ai_core.sh  start_all.bat  start_all.sh  start_backend.bat  start_backend.sh  start_development.bat  start_frontend.bat  start_frontend.sh  start_optimized.bat  start_optimized.sh  stop_all.sh  test_all.sh  test_api_simple.py  test_backend_ai_core_connectivity.py  test_complete_system.py  test_frontend_backend.js  test_frontend_ollama.py  test_genesis_folder.py  test_optimizations.py  (+5 more)
ai_core/: README.md  agents.py  debug_test.py  error_handling.py  llm.py  logging_config.py  main.py  models.py  pyproject.toml  requirements.txt  simple_main.py  start_ai_core.py  start_ollama.py  tasks.py  test_api.py  test_llm_crewai.py  test_ollama.py  test_ollama_simple.py  tools.py  tree_sitter_tools.py
backend/: Cargo.toml  README.md  config.toml  env.example
backend/.cargo/: config.toml
backend/config/: config.toml
backend/src/: config.rs  database.rs  error.rs  health.rs  lib.rs  main.rs  models.rs  validation.rs
genesis-frontend/: .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
genesis-frontend/--name/src-tauri/: tauri.conf.json
genesis-frontend/src/: App.tsx  index.css
genesis-frontend/src-tauri/: Cargo.toml  tauri.conf.json
genesis-frontend/temp-app/: package.json
genesis-frontend/temp-app/src-tauri/: tauri.conf.json
scripts/: mongodb_setup.py  monitor.py  performance_monitor.py
tests/: test_integration.py
tree_sitter/: .eslintrc.json  README.md  package.json  test.js  validate.js
